--- a/tutorials/ncut_turtorial_multiple_images.ipynb
+++ b/tutorials/ncut_turtorial_multiple_images.ipynb
@@ -180,7 +180,7 @@
     "\n",
     "start = time.time()\n",
     "eigenvectors, eigenvalues = NCUT(\n",
-    "    num_eig=50, num_sample=30000, knn=10, t=0.3, device='cpu'\n",
+    "    num_eig=50, num_sample=30000, knn=10, affinity_focal_gamma=0.3, device='cpu'\n",
     ").fit_transform(input_feats)\n",
     "end = time.time()\n",
     "print(\"Nyström ncut time: {:.3f}\".format(end - start))"
