--- a/tutorials/ncut_tutorial_videos.ipynb
+++ b/tutorials/ncut_tutorial_videos.ipynb
@@ -115,7 +115,7 @@
     "    videomae = VideoMAE(layer=layer)\n",
     "    videomae = videomae.cuda()\n",
     "    frames = frames.cuda()\n",
-    "    frames = rearrange(frames, \"(b t) c h w -> b t c h w\", t=16)\n",
+    "    frames = rearrange(frames, \"(b t) c h w -> b t c h w\", affinity_focal_gamma=16)\n",
     "    feats = videomae(frames)\n",
     "    return feats\n"
    ]
