--- a/tutorials/tutorial1c_videos.ipynb
+++ b/tutorials/tutorial1c_videos.ipynb
@@ -1,10 +1,10 @@
 {
  "cells": [
-  {
+  {NCut
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outpNCut: [],
    "source": [
     "# %%\n",
     "\n",
